<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <TextView
            android:id="@+id/WelcomeText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:text="@string/welcome"
            android:textColor="@color/black"
            android:textSize="40sp" />

        <TextView
            android:id="@+id/login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:text="@string/login"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/Username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="50dp"
            android:layout_marginEnd="40dp"
            android:autofillHints="username"
            android:background="@drawable/username_design"
            android:ems="10"
            android:hint="@string/username"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:text=""
            android:textAlignment="center"
            android:textColor="@color/black"
            tools:ignore="SpeakableTextPresentCheck" />

        <EditText
            android:id="@+id/EnterPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="40dp"
            android:autofillHints="password"
            android:background="@drawable/username_design"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:minHeight="48dp"
            android:text=""
            android:textAlignment="center"
            android:textColor="@color/black"
            tools:ignore="SpeakableTextPresentCheck" />

        <Button
            android:id="@+id/loginbtn"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginStart="100dp"
            android:layout_marginTop="50dp"
            android:layout_marginEnd="100dp"
            android:text="@string/app_name"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:cornerRadius="10dp" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:shadowDx="2"
            android:shadowDy="2"
            android:shadowRadius="4"
            android:text="@string/forgot"
            android:textAlignment="center" />

        <TextView
            android:id="@+id/CreateNewAccount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="60dp"
            android:layout_marginTop="100dp"
            android:layout_marginEnd="60dp"
            android:shadowColor="#ACACAC"
            android:shadowDx="3"
            android:shadowDy="3"
            android:shadowRadius="6"
            android:text="@string/create"
            android:textAlignment="center"
            android:textColor="#0066B6"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/optionssignin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="80dp"
            android:text="@string/option"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="80dp"
            android:layout_marginTop="20dp">

            <Button
                android:id="@+id/google"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:foreground="@drawable/googlelogo"
                tools:ignore="SpeakableTextPresentCheck" />

            <Button
                android:id="@+id/instagram"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="52dp"
                android:layout_height="52dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:foreground="@drawable/iglogo"
                tools:ignore="SpeakableTextPresentCheck" />

            <Button
                android:id="@+id/facebook"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:foreground="@drawable/fblogo"
                tools:ignore="SpeakableTextPresentCheck" />
        </TableRow>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>